Expand differential tests to 266, streamline README (M40)
- Add multi-dimensional aggregation tests (21): pivot, unpivot, cube, rollup
- Add window function tests (35): ranking, analytic, frame specs
- Streamline README: server-focused quick start, move TPC-H to docs/
- Update test runner with named groups (tpch, tpcds, functions, aggregations, window)
- Update DuckDB version reference to 1.4.3
- Consolidate documentation structure
- Add M40 dev journal entry

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>