@@ -12,10 +12,6 @@
 - [Architecture](#architecture)
 - [Quick Start](#quick-start)
 - [Building from Source](#building-from-source)
-- [TPC-H Benchmark](#tpc-h-benchmark)
-  - [Data Generation](#data-generation)
-  - [Running Queries](#running-queries)
-  - [Command-Line Examples](#command-line-examples)
 - [Project Structure](#project-structure)
 - [Performance](#performance)
 - [Testing](#testing)
@@ -34,7 +30,7 @@ thunderduck provides a Spark-compatible API that translates DataFrame operations
 - **Multi-architecture support**: x86_64 (Intel/AMD) and ARM64 (AWS Graviton, Apple Silicon)
 - **Zero-copy Arrow data paths** for efficient data interchange
 - **Format support**: Parquet, Delta Lake, Iceberg
-- **Comprehensive Spark API compatibility** with 200+ differential tests
+- **Comprehensive Spark API compatibility** with 266 differential tests
 - **SQL introspection** via EXPLAIN statements
 - **TPC-H benchmark framework** for performance validation
 - **Spark Connect Server** for remote client connectivity (PySpark 4.0.x, Scala Spark)
@@ -113,41 +109,59 @@ thunderduck uses a three-layer architecture:
 
 - **Java**: 17 or later
 - **Maven**: 3.9 or later
-- **DuckDB**: 1.1.3 (automatically included via JDBC driver)
+- **Python**: 3.8+ (for PySpark client)
 
-### Installation
+### Start the Server
 
-Add thunderduck as a dependency to your Maven project:
+```bash
+# Clone and build
+git clone https://github.com/yourusername/thunderduck.git
+cd thunderduck
+mvn clean package -DskipTests
 
-```xml
-<dependency>
-    <groupId>com.thunderduck</groupId>
-    <artifactId>thunderduck-core</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
-</dependency>
+# Start the Spark Connect server (default port 15002)
+java --add-opens=java.base/java.nio=ALL-UNNAMED \
+     -jar connect-server/target/thunderduck-connect-server-*.jar
 ```
 
-### Basic Usage
+The server will show:
+```
+INFO SparkConnectServer - Starting Spark Connect Server...
+INFO SparkConnectServer - Server started successfully on port 15002
+```
 
-```java
-import com.thunderduck.runtime.DuckDBRuntime;
-import com.thunderduck.runtime.QueryExecutor;
-import org.apache.arrow.vector.VectorSchemaRoot;
+### Connect with PySpark
 
-// Create a session-scoped DuckDB runtime (each session gets isolated database)
-try (DuckDBRuntime runtime = DuckDBRuntime.create("my-session-id")) {
-    QueryExecutor executor = new QueryExecutor(runtime);
+```bash
+pip install pyspark==4.0.1
+```
 
-    // Execute query
-    String sql = "SELECT * FROM read_parquet('data.parquet') WHERE age > 25";
-    VectorSchemaRoot result = executor.executeQuery(sql);
+```python
+from pyspark.sql import SparkSession
 
-    // Process results
-    System.out.println("Rows: " + result.getRowCount());
+# Connect to thunderduck server
+spark = SparkSession.builder \
+    .appName("thunderduck-demo") \
+    .remote("sc://localhost:15002") \
+    .getOrCreate()
 
-    // Clean up result (runtime closes automatically via try-with-resources)
-    result.close();
-}
+# Run queries - same API as Apache Spark!
+df = spark.read.parquet("data/tpch_sf001/lineitem.parquet")
+df.filter(df.l_quantity > 40).groupBy("l_returnflag").count().show()
+
+# Execute SQL
+spark.sql("SELECT COUNT(*) FROM parquet.`data/tpch_sf001/orders.parquet`").show()
+```
+
+### Verify Installation
+
+```bash
+# Check server is running
+curl -s localhost:15002 || echo "Server running on port 15002"
+
+# Run differential tests (compares against Spark 4.0.1)
+./tests/scripts/setup-differential-testing.sh  # One-time setup
+./tests/scripts/run-differential-tests-v2.sh   # Run 266 tests
 ```
 
 ## Building from Source
@@ -198,300 +212,6 @@ ls -lh benchmarks/target/*.jar
 # benchmarks/target/benchmarks.jar
 ```
 
-## TPC-H Benchmark
-
-thunderduck includes a comprehensive TPC-H benchmark framework for performance testing and SQL introspection.
-
-### Data Generation
-
-TPC-H benchmark data must be generated at specific scale factors before running queries. The directory structure follows the pattern: `data/tpch_sf[scale_factor]`
-
-#### Scale Factor Guidelines
-
-| Scale Factor | Size | Use Case | Directory Name |
-|--------------|------|----------|----------------|
-| 0.01 | ~10MB | Quick testing, development | `data/tpch_sf001` |
-| 1 | ~1GB | CI/CD, integration tests | `data/tpch_sf1` |
-| 10 | ~10GB | Performance benchmarks | `data/tpch_sf10` |
-| 100 | ~100GB | Stress testing | `data/tpch_sf100` |
-
-#### Method 1: Using DuckDB TPC-H Extension (Recommended)
-
-DuckDB has a built-in TPC-H extension that generates data directly:
-
-```bash
-# Install DuckDB if not already installed
-wget https://github.com/duckdb/duckdb/releases/download/v1.1.3/duckdb_cli-linux-amd64.zip
-unzip duckdb_cli-linux-amd64.zip
-
-# Generate TPC-H data at scale factor 0.01 (10MB)
-mkdir -p data/tpch_sf001
-
-./duckdb << 'EOF'
-INSTALL tpch;
-LOAD tpch;
-
--- Generate all tables at SF 0.01
-CALL dbgen(sf=0.01);
-
--- Export all 8 required tables to Parquet format
-COPY (SELECT * FROM customer) TO 'data/tpch_sf001/customer.parquet' (FORMAT PARQUET);
-COPY (SELECT * FROM lineitem) TO 'data/tpch_sf001/lineitem.parquet' (FORMAT PARQUET);
-COPY (SELECT * FROM nation) TO 'data/tpch_sf001/nation.parquet' (FORMAT PARQUET);
-COPY (SELECT * FROM orders) TO 'data/tpch_sf001/orders.parquet' (FORMAT PARQUET);
-COPY (SELECT * FROM part) TO 'data/tpch_sf001/part.parquet' (FORMAT PARQUET);
-COPY (SELECT * FROM partsupp) TO 'data/tpch_sf001/partsupp.parquet' (FORMAT PARQUET);
-COPY (SELECT * FROM region) TO 'data/tpch_sf001/region.parquet' (FORMAT PARQUET);
-COPY (SELECT * FROM supplier) TO 'data/tpch_sf001/supplier.parquet' (FORMAT PARQUET);
-EOF
-```
-
-**Generate at different scale factors:**
-
-```bash
-# SF 1 (1GB) - CI/CD benchmarks
-mkdir -p data/tpch_sf1
-./duckdb -c "INSTALL tpch; LOAD tpch; CALL dbgen(sf=1); \
-  COPY customer TO 'data/tpch_sf1/customer.parquet' (FORMAT PARQUET); \
-  COPY lineitem TO 'data/tpch_sf1/lineitem.parquet' (FORMAT PARQUET); \
-  COPY nation TO 'data/tpch_sf1/nation.parquet' (FORMAT PARQUET); \
-  COPY orders TO 'data/tpch_sf1/orders.parquet' (FORMAT PARQUET); \
-  COPY part TO 'data/tpch_sf1/part.parquet' (FORMAT PARQUET); \
-  COPY partsupp TO 'data/tpch_sf1/partsupp.parquet' (FORMAT PARQUET); \
-  COPY region TO 'data/tpch_sf1/region.parquet' (FORMAT PARQUET); \
-  COPY supplier TO 'data/tpch_sf1/supplier.parquet' (FORMAT PARQUET);"
-
-# SF 10 (10GB) - Performance testing
-mkdir -p data/tpch_sf10
-./duckdb -c "INSTALL tpch; LOAD tpch; CALL dbgen(sf=10); \
-  COPY customer TO 'data/tpch_sf10/customer.parquet' (FORMAT PARQUET); \
-  COPY lineitem TO 'data/tpch_sf10/lineitem.parquet' (FORMAT PARQUET); \
-  COPY nation TO 'data/tpch_sf10/nation.parquet' (FORMAT PARQUET); \
-  COPY orders TO 'data/tpch_sf10/orders.parquet' (FORMAT PARQUET); \
-  COPY part TO 'data/tpch_sf10/part.parquet' (FORMAT PARQUET); \
-  COPY partsupp TO 'data/tpch_sf10/partsupp.parquet' (FORMAT PARQUET); \
-  COPY region TO 'data/tpch_sf10/region.parquet' (FORMAT PARQUET); \
-  COPY supplier TO 'data/tpch_sf10/supplier.parquet' (FORMAT PARQUET);"
-```
-
-#### Method 2: Using tpchgen-rs (20x Faster for Large Datasets)
-
-tpchgen-rs is a Rust-based TPC-H data generator significantly faster than classic dbgen:
-
-```bash
-# Install Rust and tpchgen-rs
-curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
-cargo install tpchgen-cli
-
-# Create data directory
-mkdir -p data
-
-# Generate data at different scale factors
-tpchgen-cli -s 0.01 --format=parquet --output=data/tpch_sf001  # 10MB (development)
-tpchgen-cli -s 1 --format=parquet --output=data/tpch_sf1       # 1GB (CI)
-tpchgen-cli -s 10 --format=parquet --output=data/tpch_sf10     # 10GB (nightly)
-tpchgen-cli -s 100 --format=parquet --output=data/tpch_sf100   # 100GB (stress)
-```
-
-### Verify Data Generation
-
-```bash
-# Check that all 8 tables are generated
-ls -lh data/tpch_sf001/
-
-# Expected output:
-# customer.parquet    (~12K for SF 0.01)
-# lineitem.parquet    (~48K for SF 0.01)
-# nation.parquet      (~1.2K for SF 0.01)
-# orders.parquet      (~24K for SF 0.01)
-# part.parquet        (~16K for SF 0.01)
-# partsupp.parquet    (~32K for SF 0.01)
-# region.parquet      (~800 bytes for SF 0.01)
-# supplier.parquet    (~4.0K for SF 0.01)
-
-# Verify Parquet files are valid
-java -cp benchmarks/target/benchmarks.jar \
-  com.thunderduck.tpch.TPCHCommandLine \
-  --query 1 --mode explain --data ./data/tpch_sf001
-```
-
-#### Required Directory Structure
-
-```
-thunderduck/
-└── data/
-    ├── tpch_sf001/          # Scale Factor 0.01 (10MB)
-    │   ├── customer.parquet
-    │   ├── lineitem.parquet
-    │   ├── nation.parquet
-    │   ├── orders.parquet
-    │   ├── part.parquet
-    │   ├── partsupp.parquet
-    │   ├── region.parquet
-    │   └── supplier.parquet
-    ├── tpch_sf1/            # Scale Factor 1 (1GB)
-    │   └── [same 8 tables]
-    ├── tpch_sf10/           # Scale Factor 10 (10GB)
-    │   └── [same 8 tables]
-    └── tpch_sf100/          # Scale Factor 100 (100GB)
-        └── [same 8 tables]
-```
-
-**Important Notes:**
-- All 8 tables must be present for queries to execute
-- Files must be in Parquet format with `.parquet` extension
-- Directory naming: `tpch_sf<scale>` where scale is zero-padded for < 1 (e.g., `sf001` for 0.01)
-- The scale factor is automatically inferred from the directory name
-
-### Running Queries
-
-#### Command-Line Interface
-
-The `TPCHCommandLine` tool provides a simple CLI for executing TPC-H queries with different modes:
-
-```bash
-# Build the benchmarks JAR first
-mvn clean package -pl benchmarks
-
-# Run single query with EXPLAIN
-java -cp benchmarks/target/benchmarks.jar \
-  com.thunderduck.tpch.TPCHCommandLine \
-  --query 1 \
-  --mode explain \
-  --data ./data/tpch_sf001
-
-# Run with EXPLAIN ANALYZE (includes execution statistics)
-java -cp benchmarks/target/benchmarks.jar \
-  com.thunderduck.tpch.TPCHCommandLine \
-  --query 6 \
-  --mode analyze \
-  --data ./data/tpch_sf001
-
-# Execute query and show results
-java -cp benchmarks/target/benchmarks.jar \
-  com.thunderduck.tpch.TPCHCommandLine \
-  --query 3 \
-  --mode execute \
-  --data ./data/tpch_sf001
-```
-
-### Command-Line Examples
-
-#### 1. Query 1: Pricing Summary Report (Scan + Aggregation)
-
-```bash
-java -cp benchmarks/target/benchmarks.jar \
-  com.thunderduck.tpch.TPCHCommandLine \
-  --query 1 \
-  --mode explain \
-  --data ./data/tpch_sf001
-```
-
-**Expected Output:**
-```
-============================================================
-TPC-H Query 1
-Mode: EXPLAIN
-Data Path: ./data/tpch_sf001
-Scale Factor: 0.01
-============================================================
-
-============================================================
-GENERATED SQL
-============================================================
-
-SELECT
-  l_returnflag,
-  l_linestatus,
-  SUM(l_quantity) AS sum_qty,
-  SUM(l_extendedprice) AS sum_base_price,
-  ...
-FROM read_parquet('./data/tpch_sf001/lineitem.parquet')
-WHERE l_shipdate <= DATE '1998-12-01'
-GROUP BY l_returnflag, l_linestatus
-ORDER BY l_returnflag, l_linestatus
-
-============================================================
-DUCKDB EXPLAIN
-============================================================
-
-┌─────────────────────────────┐
-│         QUERY PLAN          │
-└─────────────────────────────┘
-...
-
-============================================================
-Execution time: 15 ms
-============================================================
-```
-
-#### 2. Query 6: Forecasting Revenue Change (Selective Scan)
-
-```bash
-java -cp benchmarks/target/benchmarks.jar \
-  com.thunderduck.tpch.TPCHCommandLine \
-  --query 6 \
-  --mode analyze \
-  --data ./data/tpch_sf001
-```
-
-This shows execution statistics including:
-- Row counts at each operator
-- Execution time per operator
-- Memory usage
-
-#### 3. Query 3: Shipping Priority (Multi-table Join)
-
-```bash
-java -cp benchmarks/target/benchmarks.jar \
-  com.thunderduck.tpch.TPCHCommandLine \
-  --query 3 \
-  --mode execute \
-  --data ./data/tpch_sf001
-```
-
-Shows actual query results in tabular format.
-
-#### 4. Run All Queries
-
-```bash
-java -cp benchmarks/target/benchmarks.jar \
-  com.thunderduck.tpch.TPCHCommandLine \
-  --query all \
-  --mode execute \
-  --data ./data/tpch_sf001
-```
-
-Currently executes queries 1, 3, and 6 (more queries coming soon).
-
-### Programmatic API
-
-You can also use the `TPCHClient` Java API in your code:
-
-```java
-import com.thunderduck.tpch.TPCHClient;
-import org.apache.arrow.vector.VectorSchemaRoot;
-
-// Create client
-TPCHClient client = new TPCHClient("./data/tpch_sf001", 0.01);
-
-// Execute query
-VectorSchemaRoot result = client.executeQuery(1);
-System.out.println("Rows: " + result.getRowCount());
-result.close();
-
-// Get EXPLAIN output
-String plan = client.explainQuery(1);
-System.out.println(plan);
-
-// Get EXPLAIN ANALYZE output
-String stats = client.explainAnalyzeQuery(1);
-System.out.println(stats);
-
-// Clean up
-client.close();
-```
-
 ## Project Structure
 
 ```
@@ -524,9 +244,9 @@ thunderduck/
 │   │   └── introspection/     # EXPLAIN statement tests
 │   └── pom.xml
 └── docs/                      # Documentation
-    ├── Analysis_and_Design.md
-    ├── SPARK_CONNECT_GAP_ANALYSIS.md
-    └── architect/             # Design documents
+    ├── TPC_H_BENCHMARK.md     # TPC-H benchmark guide
+    ├── SPARK_CONNECT_PROTOCOL_SPEC.md
+    └── architect/             # Architecture design documents
 ```
 
 ## Performance
@@ -557,20 +277,30 @@ Based on TPC-H benchmark at scale factor 10 (10GB):
 
 ## Testing
 
-thunderduck includes a comprehensive test suite with 500+ tests:
+thunderduck includes a comprehensive test suite with 700+ tests:
 
 ### Test Categories
 
 - **Unit Tests (300+)**: Type mapping, expression translation, SQL generation
 - **Integration Tests (100+)**: End-to-end pipelines, format readers
-- **Differential Tests (200+)**: Spark 4.0.x parity validation
+- **Differential Tests (266)**: Spark 4.0.1 parity validation (all passing)
 - **End-to-End Tests**: PySpark client → Spark Connect → thunderduck validation
 - **Performance Benchmarks (70+)**: TPC-H queries, micro-benchmarks
+
+### Differential Test Breakdown
+
+| Test Suite | Tests | Description |
+|------------|-------|-------------|
+| TPC-H | 27 | SQL (Q1-Q22) + DataFrame API (Q1, Q3, Q6, Q12) |
+| TPC-DS | 126 | SQL (102 queries) + DataFrame API (24 queries) |
+| Function Parity | 57 | Array, Map, Null, String, Math functions |
+| Multi-dim Aggregations | 21 | pivot, unpivot, cube, rollup, grouping |
+| Window Functions | 35 | rank, lag/lead, frame specs, analytics |
 
 ### Running Tests
 
 ```bash
-# Run all tests
+# Run all unit tests
 mvn test
 
 # Run specific test class
@@ -593,42 +323,62 @@ The differential testing framework compares thunderduck results against Apache S
 # One-time setup (downloads Spark 4.0.1, creates Python venv)
 ./tests/scripts/setup-differential-testing.sh
 
-# Run all TPC-H differential tests
+# Run ALL differential tests (266 tests)
 ./tests/scripts/run-differential-tests-v2.sh
+```
+
+### Test Groups
+
+Run specific test suites using named groups:
+
+```bash
+# Run by test group
+./tests/scripts/run-differential-tests-v2.sh tpch         # TPC-H tests (27 tests)
+./tests/scripts/run-differential-tests-v2.sh tpcds        # TPC-DS tests (126 tests)
+./tests/scripts/run-differential-tests-v2.sh functions    # Function parity (57 tests)
+./tests/scripts/run-differential-tests-v2.sh aggregations # Multi-dim aggregations (21 tests)
+./tests/scripts/run-differential-tests-v2.sh window       # Window functions (35 tests)
+./tests/scripts/run-differential-tests-v2.sh all          # All tests (default)
+
+# With pytest options
+./tests/scripts/run-differential-tests-v2.sh window -x    # Stop on first failure
+./tests/scripts/run-differential-tests-v2.sh --help       # Show help
 ```
 
 ### What It Does
 
 1. **Starts fresh servers**: Apache Spark 4.0.1 (port 15003) + Thunderduck (port 15002)
-2. **Loads TPC-H data** into both systems
+2. **Loads test data** into both systems
 3. **Executes queries on both** and compares results:
    - Schema comparison (column names and types)
    - Row count comparison
    - Row-by-row data comparison with detailed diff output
 4. **Cleans up servers** on completion (even on Ctrl+C)
 
-### Running Specific Tests
+### Running Tests Directly
 
 ```bash
 # Activate venv first
 source tests/integration/.venv/bin/activate
 cd tests/integration
 
-# Run all tests
-python -m pytest test_differential_v2.py -v
+# Run specific test files
+python -m pytest test_differential_v2.py -v           # TPC-H
+python -m pytest test_tpcds_differential.py -v        # TPC-DS
+python -m pytest test_dataframe_functions.py -v       # Function parity
+python -m pytest test_multidim_aggregations.py -v     # Aggregations
+python -m pytest test_window_functions.py -v          # Window functions
 
-# Run specific query (e.g., TPC-H Q1)
-python -m pytest test_differential_v2.py::TestTPCH_Q1_Differential -v -s
-
-# Run sanity test
-python -m pytest test_differential_v2.py::TestDifferential_Sanity -v -s
+# Run by marker
+python -m pytest -m "differential" -v                 # All differential tests
+python -m pytest -m "window" -v                       # Window function tests
 ```
 
 ### Test Results
 
-All 23 TPC-H tests (Q1-Q22 + sanity) pass with thunderduck consistently faster than Spark:
-- **Q1**: 5.99x faster
-- **Full suite**: 20 seconds
+All 266 differential tests pass with thunderduck consistently faster than Spark:
+- **TPC-H Q1**: ~6x faster
+- **Full test suite**: ~3 minutes
 
 See [Differential Testing Architecture](docs/architect/DIFFERENTIAL_TESTING_ARCHITECTURE.md) for details.
 
@@ -855,7 +605,7 @@ tests/src/test/python/thunderduck_e2e/test_tpch.py::TestTPCH::test_q02_dataframe
 All PRs must meet these criteria:
 - Line coverage ≥ 85%
 - Branch coverage ≥ 80%
-- All differential tests passing (100%)
+- All 266 differential tests passing (100%)
 - All E2E tests passing (100%)
 - Zero compiler warnings
 
@@ -863,11 +613,11 @@ All PRs must meet these criteria:
 
 ### Technical Documentation
 
+- **[TPC-H Benchmark Guide](docs/TPC_H_BENCHMARK.md)**: Data generation and query execution
 - **[Session Management](docs/architect/SESSION_MANAGEMENT_ARCHITECTURE.md)**: Session-scoped DuckDB runtime architecture
 - **[Arrow Streaming](docs/architect/ARROW_STREAMING_ARCHITECTURE.md)**: Zero-copy Arrow streaming from DuckDB
-- **[Differential Testing](docs/architect/DIFFERENTIAL_TESTING_ARCHITECTURE.md)**: Spark parity validation framework
+- **[Differential Testing](docs/architect/DIFFERENTIAL_TESTING_ARCHITECTURE.md)**: Spark parity validation framework (266 tests)
 - **[Protocol Specification](docs/SPARK_CONNECT_PROTOCOL_SPEC.md)**: Spark Connect protocol details
-- **[Benchmark Guide](benchmarks/README.md)**: TPC-H framework usage
 - **[Dev Journal](docs/dev_journal/)**: Milestone completion reports
 
 ### API Documentation
@@ -886,7 +636,7 @@ We welcome contributions! Please see the following guidelines:
 1. **Fork the repository** and create a feature branch
 2. **Write tests** for new functionality
 3. **Ensure quality gates pass**: `mvn verify -Pcoverage`
-4. **Run differential tests**: All 200+ tests must pass
+4. **Run differential tests**: All 266 tests must pass
 5. **Submit a pull request** with clear description
 
 ### Development Workflow
